# draw.io

./: .gitignore  OAuth.drawio  README.md  Untitled Diagram.drawio  testing.drawio
arabic-blog/: 2-Isms.xml  2-harf-2.xml  2-harf.xml  2-mutanakkin.xml  3-divisions-of-balagah.xml  3-parts-of-learning-arabic.xml  3-parts-of-speech-arabic.xml  3-tanween.xml  3-weak-letters.xml  4-cases-of-Irab.xml  4-cases-of-adad.xml  4-jawazim-mudhari.xml  4-mabni.xml  4-types-of-tawabi.xml  ArabicBlog.xml  Atf-Nask.xml  Atf.xml  Inna and sisters.xml  Maqsoor.xml  Nait.xml  Six Isms.xml  Untitled Diagram.xml  cases-for-munnada.xml  docker.xml  exclamations-in-arabic.xml  harf-nida.xml  ism-manqoos.xml  jawazim-mudhari.xml  kana and sisters.xml  nasb.xml  nawasib-mudhari.xml  negation-with-ma.xml  tanween  tarkheem.xml  tasgheer.xml  tawkeed.xml  verbs-in-arabic-grammar.xml
blog/: ChatAppA-B-Blob.xml  ChatAppA-B-C.xml  ChatAppA-B-Queue.xml  ChatAppA.xml  OAuth2.xml  Spark Architecture.xml  Spark Streaming.xml  TechGuide.xml  autocomplete.xml  blockchain.xml  reactivesystems.xml  tinyurl_applicationLayer.xml  tinyurl_applicationLayer_final.xml  twitter_architecture.xml
linkedin/: README.md
linkedin/2023/: Uber-spark-analysers.drawio  cloudflare.drawio
linkedin/2025/: 4-shopify-store-with-stripe.drawio  (+6 more)
posts/: 10-instagram.drawio  3-OAuth.drawio  4-shopify-store-with-stripe.drawio  5-Twitter HLD.drawio  7-twitter followers.drawio  9-whatsapp-user-signup.drawio  9-whatsapp-user-signup.py  9-whatsapp.drawio  README.md  mindmap.drawio  pyproject.toml
talks/: README.md
(+7 files in other folders)
