[project]
name = "sde-diagrams"
version = "0.0.1"
description = "This repository is for System Design Engineer diagrams"
authors = [
    {name = "Kamran Ali",email = "kamranalinitb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "diagrams (>=0.24.4,<0.25.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
